syntax = "proto3";
package topk.data.v1;

import "google/api/annotations.proto";
import "topk/data/v1/document.proto";

service WriteService {
  // Upsert documents
  rpc UpsertDocuments(UpsertDocumentsRequest) returns (UpsertDocumentsResponse);

  // Delete documents
  rpc DeleteDocuments(DeleteDocumentsRequest) returns (DeleteDocumentsResponse);
}

// Upsert
message UpsertDocumentsRequest {
  repeated Document docs = 1;
}
message UpsertDocumentsResponse {
  uint64 lsn = 1;
}

// Delete
message DeleteDocumentsRequest {
  repeated string ids = 1;
}
message DeleteDocumentsResponse {
  uint64 lsn = 1;
}
