syntax = "proto3";
package topk.management.v1;

import "topk/management/v1/org.proto";

service AuthService {
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
  rpc CreateApiKey(CreateApiKeyRequest) returns (CreateApiKeyResponse);
}

message AuthenticateRequest {
  string auth0_user_id = 1;
  string auth0_user_display_name = 2;
}
message AuthenticateResponse {
  topk.management.v1.Org org = 1;
}

message ApiKey {
  uint64 org_id = 1;
  uint32 project_id = 2;
  string last_four = 3;
  optional string user_alias = 4;
}

message CreateApiKeyRequest {
  uint64 org_id = 1;
  uint32 project_id = 2;
  optional string user_alias = 3;
}
message CreateApiKeyResponse {
  string raw = 1;
  ApiKey api_key = 2;
}

message ListApiKeysRequest {
  uint64 org_id = 1;
  uint32 project_id = 2;
}
message ListApiKeysResponse {
  repeated topk.management.v1.ApiKey api_keys = 1;
}
